# CineCube

./: .gitignore  README.md
backend/: Dockerfile  environment.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  lut.py
backend/app/config/: settings.py
backend/app/core/: config.py  errors.py  logger.py  middleware.py  security.py
backend/app/models/schemas/: common.py  lut.py
backend/app/services/image/: analyzer.py  utils.py
backend/app/services/llm/: __init__.py  llama.py  prompt.py
backend/app/services/lut/: generator.py  writer.py
backend/app/utils/: helpers.py
backend/output/: cc65dae9-cd68-4f0a-bf68-c43f52be24b7.cube
backend/output/presets/: 98d59c29-f763-4ff9-a10e-d7cf1091a99a_JokerV2-Greeny.json  cc65dae9-cd68-4f0a-bf68-c43f52be24b7_JokerV1.json
backend/tests/: conftest.py
backend/tests/test_api/: test_lut.py
backend/tests/test_services/: llm_test_utils.py  test_image.py  test_llm.py  test_lut.py
output/: Untitled_1.1.1.drx
